fix vertical alignment

--- a/src/TrueOrFalse.Frontend.Web/Style/tabs.less
+++ b/src/TrueOrFalse.Frontend.Web/Style/tabs.less
@@ -89,7 +89,15 @@
             width: 122px;
             max-width: 122px;
             margin-bottom: 100px;
-            margin-left: 181px;
+            margin-left: 154%;
+
+            @media only screen and (max-width: 992px) {
+                margin-left: 156%;
+            }
+
+            @media only screen and (max-width: 768px) {
+                margin-left: 173px;
+            }
 
             @media only screen and (max-width: 480px) {
                 margin-left: 156px;
