--- a/src/TrueOrFalse.Frontend.Web/Views/Questions/QuestionList/QuestionList.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Questions/QuestionList/QuestionList.less
@@ -9,7 +9,7 @@
         .session-config-reminder {
             margin-top: -74px;
             position: absolute;
-            margin-left: 10px;
+            margin-left: 9px;
         }
 
         #CustomSessionConfigBtn {
